aula menu, toolbar e lista burra

--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -58,4 +58,15 @@
         app:cornerRadius="5dp"
         android:id="@+id/Clone"/>
 
+    <Button
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="#8B0000"
+        android:text="Lista"
+        app:cornerRadius="5dp"
+        android:id="@+id/Lista"
+        android:onClick="Lista"/>
+
 </LinearLayout>
